# jamba

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  RELEASE.md  VST3_SDK.cmake  create-plugin.py  gtest-download.cmake.in  gtest.cmake  jamba.cmake  jamba_doxygen.css  test.sh
.github/workflows/: compute-checksum.yml  run-tests-action.yml  run-tests-macos-action.yml  run-tests-windows-action.yml
audio-unit/auwrapper/: CMakeLists.txt
audio-unit/plugin/: CMakeLists.txt
blank-plugin/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build-prod.bat  build-prod.sh  configure.bat  configure.py  configure.sh  fetch_jamba.cmake  jamba-download.cmake.in  jamba.cmake  vst369.cmake
blank-plugin/archive/: README-macOS_64bits.txt  README-win_64bits.txt
blank-plugin/audio-unit/: CMakeLists.txt  Info.plist  audiounitconfig.h
blank-plugin/mac/: Info.plist
blank-plugin/resource/: __Plugin__.rc  __Plugin__.rc.in  __Plugin__.uidesc
blank-plugin/src/cpp/: Plugin.h  __Plugin__.h  __Plugin__CIDs.h  __Plugin___VST2.cpp  __Plugin___VST3.cpp  version.h.in
blank-plugin/src/cpp/GUI/: __Plugin__Controller.cpp  __Plugin__Controller.h
blank-plugin/src/cpp/RT/: __Plugin__Processor.cpp  __Plugin__Processor.h
blank-plugin/test/cpp/: test-__Plugin__.cpp
cmake/: JambaAddAllResources.cmake  JambaAddAudioUnitPlugin.cmake  JambaAddTest.cmake  JambaAddVST2Plugin.cmake  JambaAddVST3Plugin.cmake  JambaAddVSTPlugin.cmake  JambaCreateArchive.cmake  JambaCreateTargets.cmake  JambaDevScript.cmake  JambaFetchContent.cmake  JambaFetchGoogleTest.cmake  JambaFetchVST3.cmake  JambaFramework.cmake  JambaOptions.cmake  JambaSetArchitecture.cmake  JambaSetupVST2.cmake  JambaSetupVST3.cmake  JambaTesting.cmake  PlatformToolset.cmake  SMTG_PlatformToolset.cmake  VST3_SDK.cmake  gtest.cmake
cmake/modules/: VST2_SDK.cmake  VST3_SDK.cmake  VstGuiSupport.cmake
jamba-test-plugin/: CMakeLists.txt  configure.bat  configure.py
jamba-test-plugin/audio-unit/: Info.plist  audiounitconfig.h
jamba-test-plugin/mac/: Info.plist
jamba-test-plugin/resource/: JambaTestPlugin.rc  JambaTestPlugin.uidesc
jamba-test-plugin/src/cpp/: JambaTestPlugin.h  JambaTestPluginCIDs.h  JambaTestPlugin_VST2.cpp  JambaTestPlugin_VST3.cpp  Model.h  Plugin.cpp  Plugin.h  version.h.in
jamba-test-plugin/src/cpp/GUI/: JTPTextButtonController.h  JambaTestPluginController.cpp  JambaTestPluginController.h
jamba-test-plugin/src/cpp/RT/: JambaTestPluginProcessor.cpp  JambaTestPluginProcessor.h
scripts/: archive.bat.in  archive.sh.in  build.bat.in  build.sh.in  edit.bat.in  edit.sh.in  install-dev.sh.in  install.sh.in  jamba.bat.in  jamba.py.in  jamba.sh.in  jamba_multi.sh.in  jamba_single.sh.in  test-dev.sh.in  test.bat.in  test.sh.in  validate.bat.in  validate.sh.in
src/: CMakeLists.txt
src/cpp/pongasoft/Utils/: Constants.h  Cpp17.h  Disposable.h  Lerp.h  Metaprogramming.h  Misc.h  Operators.h  StringUtils.cpp  StringUtils.h  stl.h
src/cpp/pongasoft/Utils/Clock/: Clock.h
src/cpp/pongasoft/Utils/Collection/: CircularBuffer.h
src/cpp/pongasoft/Utils/Concurrent/: Concurrent.h  SpinLock.h
src/cpp/pongasoft/Utils/Reflection/: Reflection.h
src/cpp/pongasoft/VST/: AudioBuffer.h  AudioUtils.h  FObjectCx.cpp  FObjectCx.h  Jamba.h  Jamba.md  MessageHandler.cpp  MessageHandler.h  MessageProducer.h  Messaging.h  NormalizedState.cpp  NormalizedState.h  ParamConverters.h  ParamDef.h  ParamSerializers.h  Parameters.cpp  Parameters.h  PluginFactory.h  SampleRateBasedClock.h  Timer.h  Types.h
src/cpp/pongasoft/VST/Debug/: ParamDisplay.cpp  ParamDisplay.h  ParamLine.cpp  ParamLine.h  ParamTable.cpp  ParamTable.h
src/cpp/pongasoft/VST/GUI/: DrawContext.cpp  DrawContext.h  GUIController.cpp  GUIController.h  GUIState.cpp  GUIState.h  GUIUtils.h  GUIViewState.h  IDialogHandler.h  LookAndFeel.h  ParamAwareViews.cpp  ParamAwareViews.h  Types.h  ViewCxMgr.cpp  ViewCxMgr.h
src/cpp/pongasoft/VST/GUI/Params/: GUIAnyParam.h  GUIJmbParameter.cpp  GUIJmbParameter.h  GUIOptionalParam.h  GUIParamCx.cpp  GUIParamCx.h  GUIParamCxAware.cpp  GUIParamCxAware.h  GUIParamCxAware.hpp  GUIParamCxMgr.cpp  GUIParamCxMgr.h  GUIParamCxMgr.hpp  GUIParamSerializers.h  GUIParameter.h  GUIParameters.cpp  GUIParameters.h  GUIRawParameter.cpp  GUIRawParameter.h  GUIRawVstParameter.cpp  GUIRawVstParameter.h  GUISerParameter.h  GUIValParameter.h  GUIVstParameter.h  HostParameters.h  IGUIParameter.h  IGUIParameter.hpp  ParamAware.cpp  ParamAware.h  ParamAware.hpp  VstParameters.h
src/cpp/pongasoft/VST/GUI/Views/: CustomControlView.cpp  CustomControlView.h  CustomController.h  CustomView.cpp  CustomView.h  CustomViewCreator.h  CustomViewFactory.cpp  CustomViewFactory.h  CustomViewLifecycle.h  DebugParamDisplayView.h  DiscreteButtonView.cpp  DiscreteButtonView.h  GlobalKeyboardHook.h  ImageView.cpp  ImageView.h  JambaViews.h  ModalViewContainer.h  MomentaryButtonView.cpp  MomentaryButtonView.h  ParamDisplayView.cpp  ParamDisplayView.h  ParamImageView.cpp  ParamImageView.h  PluginAccessor.h  ScrollbarView.cpp  ScrollbarView.h  SelfContainedViewListener.h  StateAware.h  StepButtonView.cpp  StepButtonView.h  StepPadView.cpp  StepPadView.h  SwitchViewContainer.cpp  SwitchViewContainer.h  TextButtonView.cpp  TextButtonView.h  TextEditView.cpp  TextEditView.h  ToggleButtonView.cpp  ToggleButtonView.h
src/cpp/pongasoft/VST/RT/: RTJmbInParameter.h  RTJmbOutParameter.h  RTJmbParameter.h  RTParameter.cpp  RTParameter.h  RTProcessor.cpp  RTProcessor.h  RTSerParameter.h  RTState.cpp  RTState.h
src/cpp/pongasoft/VST/VST2/: vst2wrapper_jamba.cpp  vst2wrapper_jamba.h
src/cpp/pongasoft/VST/VstUtils/: ExpiringDataCache.h  FastWriteMemoryStream.cpp  FastWriteMemoryStream.h  ReadOnlyMemoryStream.cpp  ReadOnlyMemoryStream.h  Utils.h  VectorStream.cpp  VectorStream.h
src/cpp/pongasoft/logging/: jamba_version.h.in  logging.cpp  logging.h  loguru.cpp  loguru.hpp
src/cpp/public.sdk/source/vst/basewrapper/: basewrapper.cpp  basewrapper.h
src/cpp/public.sdk/source/vst/vst2wrapper/: vst2wrapper.cpp  vst2wrapper.h
test/cpp/pongasoft/Utils/: test-Lerp.cpp  (+1 more)
windows/: testmain.cpp
(+21 files in other folders)
